--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.sign_in">
 
     <application
@@ -14,16 +15,10 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-
             </intent-filter>
         </activity>
-        <activity android:name=".SetActivity">
-
-
-        </activity>
-        <activity android:name=".ResultActivity">
-
-
+        <activity android:name=".MyAdapter"
+            tools:ignore="Instantiatable">
         </activity>
     </application>
 
